# python_beginner_projects

./: .gitignore  LICENSE  README.md
bank_with_oops/: README.md
bank_with_oops/bank/banking_system/: bank_system_main.py
cli_task_manager/: README.md
cli_task_manager/cli_task_manager/: task_manager_main.py
design_patterns/: builder_pattern.py
digital_auto_market_fastapi/: README.md  dependencies.py  main.py  requirements.txt
digital_auto_market_fastapi/routers/: user.py  user_api.py
digital_auto_market_fastapi/routersapi/: autoinfo_api.py  autoinfo_crud.py  autoinfo_schema.py  user_api.py  user_response_model.py  user_schema.py  vdetails_api.py  vdetails_schema.py
digital_auto_market_fastapi/utils/database/: SQLQuery.sql  database.py  database_connect.py  ddl.py  models.py  odbc17driver_script.sh  user_model.py
digital_auto_market_fastapi/utils/security/: secure_authentication.py
intercative_intro_Typer/: README.md  main.py
python_package_bestpractice/: example_script.py
python_package_bestpractice/impyrial/: __init__.py
python_package_bestpractice/impyrial/length/: __init__.py  api.py  core.py
village_info_service/: pyproject.toml
village_info_service/village_info_service/: main.py
village_info_service/village_info_service/auth/: authenticate.py  hash_password.py  jwt_handler.py
village_info_service/village_info_service/database/: connection.py
village_info_service/village_info_service/models/: events.py  users.py
village_info_service/village_info_service/routes/: events.py  users.py
(+3 files in other folders)
