[tool.poetry]
name = "village-info-service"
version = "0.1.0"
description = ""
authors = ["Nazneen Mulani <mulanisnaaz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.scripts]
#start = "uvicorn.run:run"


